# quill_code

./: pubspec.yaml  quill_ts_bridge.c
.claude/: settings.local.json
android/: build.gradle.kts
android/cpp/: CMakeLists.txt  quill_ts_bridge.c
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  quill_perf_stub.c
android/src/main/java/dev/quillcode/quill_code/: QuillCodePlugin.java
android/src/main/rust/: Cargo.toml  build_rust.bat  build_rust.sh
android/src/main/rust/.cargo/: config.toml
android/src/main/rust/src/: lib.rs
example/: pubspec.yaml
example/android/app/: build.gradle.kts
example/assets/themes/: abyss_dark.json  amber_storm.json  arctic_ice.json  atom_one_light.json  ayu_dark.json  catppuccin_latte.json  cobalt2.json  crystal_cave.json  cyberpunk_acid.json  dark_catppuccin.json  dark_modern.json  dracula.json  ember_glow.json  everforest_dark.json  forest_mist.json  github_dark.json  github_dark_curved.json  github_light.json  gruvbox_dark.json  gruvbox_light.json  horizon.json  ink.json  kanagawa.json  laser_matrix.json  light.json  material_ocean.json  monokai.json  neon_synthwave.json  night_owl.json  nord.json  one_dark_pro.json  palenight.json  poimandres.json  rose_pine.json  sakura_night.json  shades_of_purple.json  solar_sepia.json  solarized_dark.json  synth_city_light.json  tokyo_night.json  (+4 more)
example/lib/: app_state.dart  main.dart  stress_test_sample.dart  theme_loader.dart
example/lib/ai/: gemini_service.dart
example/lib/screens/: color_decorator_demo.dart  git_diff_screen.dart  settings_screen.dart
example/lib/widgets/: ai_panel.dart
lib/: quill_code.dart
lib/src/actions/: code_action.dart  code_action_provider.dart  lightbulb_widget.dart  standard_actions.dart  symbol_analyzer.dart  symbol_info_panel.dart
lib/src/color/: color_detector.dart
lib/src/completion/: completion_item.dart  completion_publisher.dart  flutter_snippets.dart  ghost_text_controller.dart  ghost_text_providers.dart  snippet.dart  snippet_controller.dart  vscode_snippets.dart
lib/src/core/: char_position.dart  cursor.dart  editor_controller.dart  editor_props.dart  selection.dart  symbol_pair.dart
lib/src/diagnostics/: diagnostic_region.dart  diagnostics_container.dart  quick_fix.dart
lib/src/diff/: git_diff.dart
lib/src/events/: editor_event.dart  event_manager.dart
lib/src/highlighting/: analyze_manager.dart  code_block.dart  incremental_analyze_manager.dart  inlay_hint_model.dart  isolate_tokenizer.dart  isolate_tokenizer_impl.dart  isolate_tokenizer_stub.dart  line_style.dart  monarch_tokenizer.dart  span.dart  styles.dart  text_style_token.dart
lib/src/language/: _regex_language.dart  bash_language.dart  cpp_language.dart  css_language.dart  dart_formatter.dart  dart_language.dart  html_language.dart  javascript_language.dart  json_language.dart  kotlin_language.dart  language.dart  monarch_language.dart  plain_text_language.dart  python_language.dart  rust_language.dart  typescript_language.dart  xml_language.dart  yaml_language.dart
lib/src/lsp/: lsp_bridge.dart  lsp_controller_mixin.dart  lsp_hover_panel.dart  lsp_signature_panel.dart  lsp_socket_client.dart  lsp_stdio_client.dart  quill_lsp_config.dart
lib/src/native/: quill_native.dart
lib/src/rendering/: code_editor_render_object.dart  cursor_painter.dart  diagnostic_painter.dart  gutter_painter.dart  inlay_hint_painter.dart  selection_painter.dart  sticky_scroll_painter.dart  text_painter_cache.dart
lib/src/scroll/: scroll_controller_2d.dart  two_dimensional_editor_scroll.dart
lib/src/search/: editor_searcher.dart  search_options.dart
lib/src/text/: bracket_matcher.dart  content.dart  content_line.dart  line_separator.dart  rope.dart  text_range.dart  undo_manager.dart
lib/src/theme/: color_scheme.dart  editor_theme.dart  font_loader.dart  indent_program.dart  theme_dark.dart  theme_dark_modern.dart  theme_dracula.dart  theme_github.dart  theme_github_dark.dart  theme_helpers.dart  theme_light.dart  theme_monokai.dart  theme_neon.dart  vscode_theme_parser.dart
lib/src/tree_sitter/: ts_analyze_manager.dart  ts_ffi.dart  ts_ffi_impl.dart  ts_ffi_stub.dart  ts_language.dart  ts_parser.dart  ts_parser_impl.dart  ts_parser_stub.dart  ts_queries.dart  ts_semantic.dart  ts_semantic_impl.dart  ts_semantic_stub.dart  ts_symbol.dart  ts_token_mapper.dart
lib/src/widgets/: actions_menu_widget.dart  color_picker_overlay.dart  completion_popup.dart  diagnostic_tooltip.dart  diagnostics_panel.dart  minimap_widget.dart  quill_code_editor.dart  search_bar_widget.dart  selection_toolbar.dart  symbol_input_bar.dart
scripts/: fetch_grammars.sh
