[package]
name    = "quill_perf"
version = "0.1.0"
edition = "2021"

[lib]
name       = "quill_perf"
crate-type = ["staticlib"]

[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
# panic=abort removed: with std on Android, default panic handling works fine
# and avoids the need for a custom #[panic_handler]

[profile.dev]
# dev builds: keep defaults for better error messages
